# tbai

./: .gitmodules  README.md  tbai_commands.txt
go2_description/urdf/: dummy.urdf  go2.urdf  go2_simplified.urdf
go2_description/xacro/: _d435.gazebo.xacro  _d435.urdf.xacro  gazebo.xacro  leg.xacro  robot.xacro  robot_multi_realsense.xacro  robot_single_realsense.xacro
tbai_context_aware/: CMakeLists.txt
tbai_description/urdf/: anymal_d_gazebo.urdf.xacro  go2.urdf  go2_gazebo.urdf.xacro  robot_single_realsense.xacro
tbai_description/xacro/: _d435.gazebo.xacro  _d435.urdf.xacro  leg.xacro
tbai_dtc/launch/: simple.launch  simple_anymal.launch
tbai_gazebo/: CMakeLists.txt
tbai_gazebo/include/tbai_gazebo/: StatePublisher.hpp
tbai_gazebo/include/tbai_gazebo/legged_state_estimator/: contact_estimator.hpp  legged_state_estimator.hpp  legged_state_estimator_settings.hpp  robot_model.hpp
tbai_gazebo/include/tbai_gazebo/legged_state_estimator/inekf/: inekf.hpp  lie_group.hpp
tbai_gazebo/src/: StatePublisher.cpp
tbai_gazebo/src/legged_state_estimator/: contact_estimator.cpp  legged_state_estimator.cpp  legged_state_estimator_settings.cpp  robot_model.cpp
tbai_gazebo/src/legged_state_estimator/inekf/: inekf.cpp  inekf_state.cpp  lie_group.cpp  noise_params.cpp
tbai_go2_mpc_perceptive/: CMakeLists.txt  package.xml
tbai_go2_mpc_perceptive/config/: default_config.yaml  frame_declarations.info  task.info
tbai_go2_mpc_perceptive/launch/: go2.rviz  simple.launch
tbai_go2_mpc_perceptive/src/: simple.cpp
tbai_mpc/: CMakeLists.txt
tbai_mpc/src/: Go2MpcController.cpp  Go2MpcNode.cpp  MpcController.cpp  go2_simple.cpp
tbai_mpc_perceptive/config/: task.info
tbai_mpc_perceptive/launch/: anymal_d.rviz  go2.rviz  simple.launch  simple_anymal.launch  simple_move_base.launch
tbai_mpc_perceptive/maps/: large.yaml
tbai_mpc_perceptive/src/: simple.cpp
tbai_rl_blind/launch/: simple.launch
tbai_rl_perceptive/launch/: simple.launch  simple_anymal.launch
(+29 files in other folders)
